--- a/style.css
+++ b/style.css
@@ -77,11 +77,19 @@ display: none;
     justify-content: space-around;
 }
 
-.categories p {
+.categories p{
     background-color: #A435F0;
     color: white;
     border-radius: 30px;
     padding: 10px;
+     border: solid  #A435F0 1px ;
+}
+.categories p:hover{
+    background-color: transparent;
+    transition: 1s;
+    color:black;
+    border: solid  #A435F0 1px ;
+    cursor: pointer;
 }
 
 .sale-image img {
@@ -98,8 +106,20 @@ display: none;
     position: absolute;
     top: 30%;
     left: 5%;
+    animation-name: zoom;
+    animation-duration: 1s;
 }
+@keyframes zoom {
+    0%{
+        transform:scale(0);
+        opacity: 0;
+    }
 
+    100%{
+        opacity: 1;
+        transform:scale(1);
+    }
+}
 .recommended {
     padding: 10px;
 }
