--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
     display: flex;
     gap: 25px;
     align-items: center;
+    cursor: pointer;
 }
 .mylearning{
     position: relative;
