--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ display: none;
 
 .course-card {
     width: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img {
@@ -187,4 +190,16 @@ display: none;
 
 .footer__one p {
     margin: 20px;
+}
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+
+}
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+
 }
